@@ -13,7 +13,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: tclInt.decls,v 1.130 2008/12/09 20:16:29 dgp Exp $
+# RCS: @(#) $Id: tclInt.decls,v 1.131 2008/12/09 21:47:08 nijtmans Exp $
 
 library tcl
 
@@ -934,9 +934,9 @@ declare 235 generic {
 
 
 # TIP 337 made this one public
-#declare 236 generic {
-#    void TclBackgroundException(Tcl_Interp *interp, int code)
-#}
+declare 236 generic {
+    void Tcl_BackgroundException(Tcl_Interp *interp, int code)
+}
 
 # TIP #285: Script cancellation support.
 declare 237 generic {
