@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclIntDecls.h,v 1.126 2008/12/09 20:16:30 dgp Exp $
+ * RCS: @(#) $Id: tclIntDecls.h,v 1.127 2008/12/09 21:47:08 nijtmans Exp $
  */
 
 #ifndef _TCLINTDECLS
@@ -29,6 +29,9 @@
 #      define TCL_STORAGE_CLASS DLLIMPORT
 #   endif
 #endif
+
+/* restore source compatibility for TIP #337 */
+#define TclBackgroundException Tcl_BackgroundException
 
 /*
  * WARNING: This file is automatically generated by the tools/genStubs.tcl
@@ -1059,7 +1062,12 @@ EXTERN Var *		TclVarHashCreateVar (TclVarHashTable * tablePtr,
 EXTERN void		TclInitVarHashTable (TclVarHashTable * tablePtr,
 				Namespace * nsPtr);
 #endif
-/* Slot 236 is reserved */
+#ifndef Tcl_BackgroundException_TCL_DECLARED
+#define Tcl_BackgroundException_TCL_DECLARED
+/* 236 */
+EXTERN void		Tcl_BackgroundException (Tcl_Interp * interp,
+				int code);
+#endif
 #ifndef TclResetCancellation_TCL_DECLARED
 #define TclResetCancellation_TCL_DECLARED
 /* 237 */
@@ -1364,7 +1372,7 @@ typedef struct TclIntStubs {
     void (*tclGetSrcInfoForPc) (CmdFrame * contextPtr); /* 233 */
     Var * (*tclVarHashCreateVar) (TclVarHashTable * tablePtr, const char * key, int * newPtr); /* 234 */
     void (*tclInitVarHashTable) (TclVarHashTable * tablePtr, Namespace * nsPtr); /* 235 */
-    void *reserved236;
+    void (*tcl_BackgroundException) (Tcl_Interp * interp, int code); /* 236 */
     int (*tclResetCancellation) (Tcl_Interp * interp, int force); /* 237 */
     int (*tclNRInterpProc) (ClientData clientData, Tcl_Interp * interp, int objc, Tcl_Obj *const objv[]); /* 238 */
     int (*tclNRInterpProcCore) (Tcl_Interp * interp, Tcl_Obj * procNameObj, int skip, ProcErrorProc errorProc); /* 239 */
@@ -2105,7 +2113,10 @@ extern const TclIntStubs *tclIntStubsPtr;
 #define TclInitVarHashTable \
 	(tclIntStubsPtr->tclInitVarHashTable) /* 235 */
 #endif
-/* Slot 236 is reserved */
+#ifndef Tcl_BackgroundException
+#define Tcl_BackgroundException \
+	(tclIntStubsPtr->tcl_BackgroundException) /* 236 */
+#endif
 #ifndef TclResetCancellation
 #define TclResetCancellation \
 	(tclIntStubsPtr->tclResetCancellation) /* 237 */
